Add Tekton tasks for cleanup, testing, linting, and building

--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -54,3 +54,81 @@ spec:
         python -m pip install --upgrade pip wheel
         pip install -r requirements.txt
         nosetests $(params.args)
+---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: flake8-lint
+spec:
+  description: This task lints the code using flake8
+  workspaces:
+    - name: source
+  steps:
+    - name: lint
+      image: python:3.9-slim
+      workingDir: $(workspaces.source.path)
+      command:
+        - /bin/bash
+        - -c
+      args:
+        - |
+          echo "Installing flake8..."
+          pip install -q flake8
+          
+          echo "Running flake8 linting..."
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          
+          echo "Linting completed successfully"
+---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: buildah-build
+spec:
+  description: Build an image using buildah
+  params:
+    - name: IMAGE
+      description: Reference of the image to build
+      type: string
+    - name: DOCKERFILE
+      description: Path to the Dockerfile
+      type: string
+      default: ./Dockerfile
+    - name: CONTEXT
+      description: Path to the build context
+      type: string
+      default: .
+  workspaces:
+    - name: source
+  results:
+    - name: IMAGE_DIGEST
+      description: Digest of the image just built
+  steps:
+    - name: build
+      image: quay.io/buildah/stable:v1.27
+      workingDir: $(workspaces.source.path)
+      script: |
+        #!/usr/bin/env bash
+        buildah --storage-driver=vfs bud \
+          --format=oci \
+          --no-cache \
+          -f $(params.DOCKERFILE) \
+          -t $(params.IMAGE) \
+          $(params.CONTEXT)
+        
+        buildah --storage-driver=vfs push \
+          --tls-verify=false \
+          --digestfile $(workspaces.source.path)/image-digest \
+          $(params.IMAGE) \
+          docker://$(params.IMAGE)
+        
+        cat $(workspaces.source.path)/image-digest | tee $(results.IMAGE_DIGEST.path)
+      securityContext:
+        privileged: true
+      volumeMounts:
+        - name: varlibcontainers
+          mountPath: /var/lib/containers
+  volumes:
+    - name: varlibcontainers
+      emptyDir: {}
