--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI workflow
 
 on:
   push:
@@ -7,31 +7,19 @@ on:
     branches: [ main, master ]
 
 jobs:
-  lint:
-  
-    name: Lint Code
+  build:
     runs-on: ubuntu-latest
+    container: python:3.9-slim
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pylint
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      
+          pip install -r requirements.txt
       - name: Lint with flake8
         run: |
-          # Stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # Exit-zero treats all errors as warnings
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-          test:
+          flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run unit tests with nose
         run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
